name:
  ghcjs-testing
version:
  0.1.0
synopsis:
  See readme.lhs
description:
  See readme.lhs for description.
category:
  project
homepage:
  https://github.com/tonyday567/ghcjs-testing
license:
  BSD3
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
build-type:
  Simple
cabal-version:
  >=1.14
extra-source-files:
  stack.yaml

flag no-ghcjs
     description:   compiling without ghcjs
     default:       False

library
  default-language:
    Haskell2010
  ghc-options:
  hs-source-dirs:      
    src
  exposed-modules:
    GHCJS.Extended,
    Control.Error.Extended
    Todo.Arbitrary,
    Todo.Controllers,
    Todo.Model,
    Todo.Views
  build-depends:
    base >= 4.7 && < 5,
    protolude,
    clay,
    text,
    lucid,
    lens,
    mtl,
    data-default,
    containers,
    pipes,
    QuickCheck,
    errors,
    mmorph,
    either,
    mvc
  if !flag(no-ghcjs)
    build-depends:
      ghcjs-base,
      ghcjs-dom,
      ghcjs-dom-jsffi

  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

executable readme
  default-language:
    Haskell2010
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    ./
  main-is:
    readme.lhs
  build-depends:
    base >= 4.7 && < 5,
    protolude,
    ghcjs-testing
  if !flag(no-ghcjs)
    build-depends:
      ghcjs-base,
      ghcjs-dom,
      ghcjs-dom-jsffi
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/ghcjs-testing
