name: mvc-todo
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Tony Day <tonyday567@gmail.com>
bug-reports: https://github.com/tonyday567/mvc-todo/issues
synopsis: Haskell project mvc-todo repo 
description: <https://github.com/tonyday567/mvc-todo>
extra-source-files:
    README.md

flag no-ghcjs
     description:   compiling without ghcjs
     default:       False

library
    hs-source-dirs: haskell
    exposed-modules:
                    Todo.Model
                  , Todo.Views
                  , Todo.Controllers
                  , Control.Error.Extended
                  , GHCJS.Extended
    build-depends:  base ==4.*
                  , clay
                  , containers
                  , data-default
                  , either
                  , errors
                  , lens
                  , lucid
                  , mmorph
                  , mtl
                  , mvc
                  , pipes
                  , pipes-concurrency
                  , text
    if !flag(no-ghcjs)
      build-depends:  ghcjs-base
                    , ghcjs-dom
                    , ghcjs-prim

                    
    default-language: Haskell2010
    ghc-options: -Wall
                     
executable app
    main-is: Main.hs
    hs-source-dirs: haskell
    build-depends:  base ==4.*
                  , clay
                  , containers
                  , data-default
                  , either
                  , errors
                  , lens
                  , lucid
                  , mmorph
                  , mtl
                  , mvc
                  , pipes
                  , pipes-concurrency
                  , text
    if !flag(no-ghcjs)
      build-depends:  ghcjs-base
                    , ghcjs-dom
                    , ghcjs-prim

    default-language: Haskell2010
    ghc-options: -Wall

test-suite test
    main-is: Test.hs
    hs-source-dirs: testing, haskell
    build-depends:  base ==4.*
                  , QuickCheck
                  , tasty
                  , tasty-hspec
                  , clay
                  , containers
                  , data-default
                  , either
                  , errors
                  , lens
                  , lucid
                  , mmorph
                  , mtl
                  , mvc
                  , pipes
                  , pipes-concurrency
                  , text
                
    default-language: Haskell2010
    type: exitcode-stdio-1.0
