name: mvc-todo
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Tony Day <tonyday567@gmail.com>
bug-reports: https://github.com/tonyday567/mvc-todo/issues
synopsis: Haskell project mvc-todo repo 
description: <https://github.com/tonyday567/mvc-todo>
extra-source-files:
    README.md

flag no-ghcjs
     description:   compiling without ghcjs
     default:       False

library
    hs-source-dirs: library
    exposed-modules:
                    Todo.Model
                  , Todo.Views
                  , Todo.Controllers
                  , Todo.Arbitrary
                  , Control.Error.Extended
                  , GHCJS.Extended
    build-depends:  base ==4.*
                  , QuickCheck
                  , clay
                  , containers
                  , data-default
                  , either
                  , errors
                  , lens
                  , lucid
                  , mmorph
                  , mtl
                  , mvc
                  , pipes
                  , pipes-concurrency
                  , text
    if !flag(no-ghcjs)
      build-depends:  ghcjs-base
                    , ghcjs-dom
                    , ghcjs-prim
        
    default-language: Haskell2010
    ghc-options: -Wall
                     
executable app
    main-is: app.hs
    hs-source-dirs: executable
    build-depends:  base ==4.*
                  , mvc-todo
                  , clay
                  , containers
                  , data-default
                  , either
                  , errors
                  , lens
                  , lucid
                  , mmorph
                  , mtl
                  , mvc
                  , pipes
                  , pipes-concurrency
                  , text
    if !flag(no-ghcjs)
      build-depends:  ghcjs-base
                    , ghcjs-dom
                    , ghcjs-prim

    default-language: Haskell2010
    ghc-options: -Wall

executable auto
    main-is: auto.hs
    hs-source-dirs: executable
    build-depends:  base ==4.*
                  , mvc-todo
                  , clay
                  , containers
                  , data-default
                  , either
                  , errors
                  , lens
                  , lucid
                  , mmorph
                  , mtl
                  , mvc
                  , pipes
                  , pipes-concurrency
                  , text
                  , QuickCheck
    if !flag(no-ghcjs)
      build-depends:  ghcjs-base
                    , ghcjs-dom
                    , ghcjs-prim

    default-language: Haskell2010
    ghc-options: -Wall

    
test-suite test
    main-is: test.hs
    hs-source-dirs: testing
    build-depends:  base ==4.*
                  , mvc-todo
                  , QuickCheck
                  , tasty
                  , tasty-hspec
                  , clay
                  , containers
                  , data-default
                  , either
                  , errors
                  , lens
                  , lucid
                  , mmorph
                  , mtl
                  , mvc
                  , pipes
                  , pipes-concurrency
                  , text
                
    default-language: Haskell2010
    type: exitcode-stdio-1.0
